<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Autozon</string>
    <string name="action_settings">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_here"><u>Register</u></string>
    <string name="status"><u>Status</u></string>
    <string name="cancel"><u>Cancel</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="worker">Worker</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>

    <string name="country_area">Country/Area</string>
    <string name="phone_no">Phone No</string>
    <string name="send_captcha">Send Captcha</string>
    <string name="captcha">Captcha</string>
    <string name="i_have_read_and_agreed_to">I have read and agreed to</string>
    <string name="disclaimer">disclaimer</string>
    <string name="register">Register</string>
    <string name="admin_details">Admin Details</string>
    <string name="locality_town">Locality/Town*</string>
    <string name="address_house_no_building_street">Address(House No,Building,Street)*</string>
    <string name="city_district">City/District*</string>
    <string name="pin_code">Pin Code*</string>
    <string name="state">State*</string>
    <string name="save">Save</string>
    <string name="user_Name">User Name :</string>
    <string name="email_Id">Email id :</string>
    <string name="phone_No">Phone No :</string>
    <string name="worker_details">Worker Details</string>
    <string name="admin_phone_number">Admin Phone Number</string>

    <string name="device_name">Device Name:</string>


    <string name="click_for_installation_video">Click for installation video</string>
    <string name="yes">Yes</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="data">Data:</string>
    <string name="otp">OTP</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="clear">clear</string>
    <string name="submit">submit</string>
    <string name="admin">Admin</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_email_phone_number">Enter email/phone number</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="account_manage">Account Manage</string>
    <string name="services">Services</string>
    <string name="device_control">Device Control</string>
    <string name="hi">Hi,</string>
    <string name="application_version">Application Version</string>
    <string name="manage_center">Manage Center</string>
    <string name="wi_fi">Wi Fi</string>

    <string name="device_Name">Device Name</string>
    <string name="on">On</string>
    <string name="device_address">Device Address</string>
    <string name="off">Off</string>
    <string name="devices">Devices:</string>
    <string name="door">Door</string>
    <string name="shutter">Shutter</string>
    <string name="curtain">Curtain</string>
    <string name="control">Control</string>
    <string name="name">Name :</string>
    <string name="add_address">Add Address</string>
    <string name="somet">somet</string>
    <string name="change_address">Change Address</string>
    <string name="product_installation">Product Installation</string>
    <string name="submittttt">Submit</string>
    <string name="namee">Name:</string>
    <string name="enter_your_ticket_id_here">Enter your ticket id here</string>
    <string name="task_completed">Task Completed</string>
    <string name="task_pending">Task Pending</string>
    <string name="remarks_optional">Remarks(Optional) :</string>
    <string name="service_compilance">Service Compilance</string>
    <string name="routername">RouterName</string>
    <string name="worker_Name">Worker Name :</string>
    <string name="cancellll">Cancel</string>
    <string name="bollards">Bollards</string>
    <string name="technician">Technician</string>

</resources>
