<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/water_mark"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:weightSum="60"
    android:gravity="center"
    tools:context=".BluetoothDetails">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_bluetooth_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth"
            android:textColor="#000"
            android:textSize="30sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:text="@string/on"
            android:textColor="#000"
            android:textSize="25sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_height="0dp"
        android:layout_weight="8">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/device_name"
            android:textSize="20sp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/name"
            android:textSize="20sp"
            android:textColor="#000"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="1dp"
        android:background="#007aab"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_wifi_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/wi_fi"
            android:textSize="30sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="135dp"
            android:layout_marginLeft="135dp"
            android:text="@string/off"
            android:textSize="25sp"
            />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/devices"
        android:textSize="25sp"
        android:textColor="#000"
        android:layout_gravity="center"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:id="@+id/group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/light"
            android:textSize="20sp"
            android:text="@string/bollards"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/door"
            android:textSize="20sp"
            android:text="@string/door"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shutter"
            android:textSize="20sp"
            android:text="@string/shutter"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/curtain"
            android:textSize="20sp"
            android:text="@string/curtain"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:id="@+id/control"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:textColor="#FFF"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/control"
        android:textSize="20sp"/>
</LinearLayout>