<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/water_mark"
    android:gravity="center"
    android:weightSum="100"
    tools:context=".LoginPage">

<ImageView
    android:layout_width="90dp"
    android:layout_height="0dp"
    android:layout_weight="20"
    android:layout_gravity="center"
    android:id="@+id/profile_pic"
    android:src="@drawable/logo"
    />
    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginTop="10dp"
        android:id="@+id/group"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/radio1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technician"
            android:id="@+id/radio2"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User"
            android:id="@+id/radio3"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/edittext"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:id="@+id/username"
            android:hint="@string/enter_user_name"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:textColorHint="#616161"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:drawableStart="@drawable/ic_person_outline_black_24dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:id="@+id/login_details"
            android:hint="@string/enter_email_phone_number"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:textColorHint="#616161"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_phone_android_black_24dp"
            android:drawableStart="@drawable/ic_phone_android_black_24dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:textColorHint="#616161"
            android:id="@+id/password"
            android:textSize="20sp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp" />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal">
        <CheckBox
            android:layout_width="wrap_content"
            android:text="@string/show_password"
            android:textColor="#000"
            android:id="@+id/showpwd"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:id="@+id/forgotPassword"
            android:text="@string/forgot_password"
            android:textColor="#ff3c7f"
            android:textSize="17sp"
            android:paddingRight="30dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:id="@+id/login"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:textColor="#FFF"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/login"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:textColor="#000"
        android:gravity="center"
        android:text="@string/don_t_have_an_account"
        android:textSize="15sp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:textColor="#ff3c7f"
        android:text="@string/register_here"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:id="@+id/register"
        />





</LinearLayout>