<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/water_mark"
    tools:context=".RouterDetails">

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_wifi_black_24dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/wi_fi"
            android:textColor="#000"
            android:textSize="30sp"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:text="@string/on"
            android:textColor="#000"
            android:textSize="25sp"
            android:layout_marginStart="135dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp">



        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/device_Name"
            android:textSize="20sp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/on"
            android:id="@+id/ip"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginStart="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp">



        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/device_address"
            android:textSize="20sp"
            android:textColor="#000"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/on"
            android:id="@+id/mac"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginStart="20dp" />


    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginLeft="30dp"-->
        <!--android:layout_height="wrap_content">-->



        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1.5"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Network SSID"-->
            <!--android:textSize="20sp"-->
            <!--android:textColor="#000"/>-->

        <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="2.5"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:text="On"-->
            <!--android:id="@+id/ssid"-->
            <!--android:textSize="20sp"-->
            <!--android:textColor="#000"/>-->


    <!--</LinearLayout>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="1dp"
        android:background="#007aab"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_bluetooth_black_24dp"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/bluetooth"
            android:textSize="30sp"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:text="@string/off"
            android:textSize="25sp"
            android:layout_marginStart="70dp" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devices"
        android:textSize="30sp"
        android:textColor="#000"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/light"
            android:textSize="20sp"
            android:text="@string/bollards"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/door"
            android:textSize="20sp"
            android:text="@string/door"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shutter"
            android:textSize="20sp"
            android:text="@string/shutter"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/curtain"
            android:textSize="20sp"
            android:text="@string/curtain"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/control"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:textColor="#FFF"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/control"
        android:textSize="20sp"/>
</LinearLayout>