<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/water_mark"
    android:clipToPadding="true"
    tools:context=".Register">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:isScrollContainer="true">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_pic"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:src="@drawable/registeruser"
        android:layout_width="86dp"
        android:layout_height="86dp"
        app:civ_border_width="0.5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="2dp"
        app:civ_border_color="#FFFFFF" />

            <RadioGroup
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:id="@+id/group"
                android:layout_marginTop="8dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/radio1"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technician"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/radio2"
               />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/radio3"
                    />
            </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:id="@+id/username"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/email"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:id="@+id/password"
                    android:hint="@string/enter_password"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:id="@+id/confirmPassword"
                    android:hint="@string/confirm_password"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/country_area"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="number"
            android:id="@+id/countryCode"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:id="@+id/spinner"
            android:padding="15dp">

        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/phoneNumber"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:textColor="#000" />
        <FrameLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp">


            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:id="@+id/spinner1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#E91E63"
                android:text="@string/send_captcha"
                android:gravity="center"
                android:id="@+id/sendCaptcha"
                android:visibility="visible"
                android:textSize="15sp"/>
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">


        <EditText
            android:layout_width="0dp"
            android:layout_weight="2"
            android:hint="@string/captcha"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:id="@+id/captcha" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_have_read_and_agreed_to"
            android:id="@+id/checkBox"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer"
            android:textColor="#ff3c7f"
            android:id="@+id/disclaimer"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:background="@drawable/button"
        android:textColor="#FFF"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="20sp"/>
        </LinearLayout>
</ScrollView>
